// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchMovies Saga should call the searchMoviesFailure action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`searchMovies Saga should call the searchMoviesFailure action if the response errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/search/movie?language=en-US&query=Avengers",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`searchMovies Saga should dispatch the searchMoviesSuccess action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`searchMovies Saga should dispatch the searchMoviesSuccess action if it requests the data successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/search/movie?language=en-US&query=Avengers",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
